feat: reservation 4 other user
Add admin-only capability to reassign reservations to another user by searching via email or name. Update booking logic so only child classrooms can be reserved, while parent classrooms cannot.